
Apache Solr integration 7.x-1.x-xxxx, xxxx-xx-xx
------------------------------

Apache Solr integration 7.x-1.0-xxxx, 2011-10-13
------------------------------
<<<<<<< HEAD

Apache Solr integration 7.x-1.0-beta9, 2011-xx-xx
------------------------------
#1212610 by Nick_vh: Fixed Notice: Undefined index: module in apachesolr_search_form_search_form_alter().
#1309564 by Nick_vh: Fixed Simplifying syntax between isset and empty for search_box() in custom page.
#1307526 by pwolanin, Nick_vh: Fixes for update path, core search functionality.
#1264786 by grndlvl: fix for double ellipses on search snippets.
#1305282 by pwolanin, Nick_vh: Fixed Search pages problems.
#1283924 by rjmackay, lazysoundsystem, jweowu: fix for notice undefined index errors.
#1305052 by cpliakas: fix for Negative facets not displayed when the mincount is 0.
#1279164 by pwolanin, fix for 'bundle' is not a required field, but apachesolr treats it as such.
#1300380 by Nick_vh, pwolanin: Search environments not clear about being active or online.
#1294846 by Nick_vh: Added Refactoring of the search pages.
#1188824 by pwolanin: fix for very large watchdog entries when index is in read-only mode.
#1270826 by pwolanin, brianV: fix for search page regex fails for complex queries.
#989398  by pwolanin, Nick_vh: Fix tests after moving conf files.
#1167136 by cpliakas: fix for fields attached to nodes added as facets regardless off the collection type.
#1225554 by pwolanin: fix for pagination missing in the search page administration.
#817286  by pfrenssen: API docs cleanup.
#901376  by LiuShaz, pwolanin: insure UTF-8 encoding is used for POST searches.
#1288080 by Nick_vh, brianV: make facets based on date fields work.
#1201534 by BrianV, pwolanin: restore date field indexing.
#1230380 by Shawn_Smiley: fix for Undefined index: 'facet mincount allowed'.
#1292328 by Nick_vh: add clone environment feature, tweak the UI.
#1187888 by pwolanin: move conf to a subdirectory and start supporting solr 3.3+.